fix: font family in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
   color: #333;
   transition: background-color 0.3s;
   font-family: 'PingFang SC', -apple-system, 'Segoe UI', 'Microsoft YaHei',
-    sans-serif;
+    sans-serif !important;
 }
 
 .semi-divider_inner-text {
